23-26, React challenge, starts

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
     <div id="root">Not Rendered</div>
 </body>
-<script src="restros.js"></script>
+<script src="./components/restros.js"></script>
 <script type="module" src="app.js"></script>
 </html>
